Working interaction with the GPAC card and MIO LEDs. Firmware modified, so it should be able to handle digital inputs for SEL[0:3] and RESET

--- a/device/src/mio.ucf
+++ b/device/src/mio.ucf
@@ -159,8 +159,8 @@ NET "FD[0]" LOC = V11;
 
 # ------ LED -------------------------------------------------------
 
-NET "LED5" IOSTANDARD = LVCMOS33;
-NET "LED5" LOC = U15;
+//NET "LED5" IOSTANDARD = LVCMOS33;
+//NET "LED5" LOC = U15;
 NET "LED4" IOSTANDARD = LVCMOS33;
 NET "LED4" LOC = V16;
 NET "LED3" IOSTANDARD = LVCMOS33;
@@ -406,21 +406,25 @@ NET "ADC_OUT_N[2]"  LOC = G1 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
 NET "ADC_OUT_P[3]"  LOC = H2 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
 NET "ADC_OUT_N[3]"  LOC = H1 | IOSTANDARD = LVDS_25 | DIFF_TERM = TRUE;
 
-NET "CLK_ROW_25"  LOC = A15; #DOUT0
-NET "ROW_RESET_25"  LOC = B13; #DOUT1
-NET "CLK_COL_25"  LOC = A14; #DOUT2
-NET "CLK_ROW_50"  LOC = C11; #DOUT3
-NET "ROW_RESET_50"  LOC = A12; #DOUT4
-NET "ROW_SAMPLE1_50"  LOC = A11; #DOUT5
-NET "ROW_SAMPLE2_50"  LOC = D11; #DOUT6
-NET "CLK_COL_50"  LOC = E12; #DOUT7
-NET "RESET_ROW_START"  LOC = E13; #DOUT8
-NET "RESET_ROW_CNT"  LOC = A8; #DOUT9
-NET "RESET_COL_CNT"  LOC = D12; #DOUT10
-NET "RESET_COL_START_1"  LOC = A7; #DOUT11
-NET "RESET_COL_START_2"  LOC = E11; #DOUT12
-NET "CLK_COL_100"  LOC = B6; #DOUT13
-NET "ROW_RESET_100"  LOC = A4; #DOUT14
-NET "CLK_ROW_100"  LOC = C8; #DOUT15
+
+# ------ DOUT -------------------------------------------------
+
+NET "SEL0"  LOC = A15; 	#DOUT0
+NET "SEL1"  LOC = B13; 	#DOUT1
+NET "SEL2" 	LOC = A14; 	#DOUT2
+NET "RESET"  LOC = C11; #DOUT3
+
+#NET "RESET" LOC = A12; 	#DOUT4
+#NET "ROW_SAMPLE1_50"  LOC = A11; #DOUT5
+#NET "ROW_SAMPLE2_50"  LOC = D11; #DOUT6
+#NET "CLK_COL_50"  LOC = E12; #DOUT7
+#NET "RESET_ROW_START"  LOC = E13; #DOUT8
+#NET "RESET_ROW_CNT"  LOC = A8; #DOUT9
+#NET "RESET_COL_CNT"  LOC = D12; #DOUT10
+#NET "RESET_COL_START_1"  LOC = A7; #DOUT11
+#NET "RESET_COL_START_2"  LOC = E11; #DOUT12
+#NET "CLK_COL_100"  LOC = B6; #DOUT13
+#NET "ROW_RESET_100"  LOC = A4; #DOUT14
+#NET "CLK_ROW_100"  LOC = C8; #DOUT15
 
 
