--- a/host/lab_devices/LF_SFF_MIO.yaml
+++ b/host/lab_devices/LF_SFF_MIO.yaml
@@ -101,7 +101,7 @@ registers:
     arg_names   : [ value ]
     arg_add     : { 'channel': 'VSRC1'}
    
-  - name        : fast_ADC
+  - name        : AUX_ADC
     type        : FunctionalRegister
     hw_driver   : GPAC
     arg_names   : [ value ]
