--- a/host/lab_devices/LF_SFF_MIO.yaml
+++ b/host/lab_devices/LF_SFF_MIO.yaml
@@ -100,6 +100,12 @@ registers:
     hw_driver   : GPAC
     arg_names   : [ value ]
     arg_add     : { 'channel': 'VSRC1'}
+  
+  - name        : DIODE_HV
+    type        : FunctionalRegister
+    hw_driver   : GPAC
+    arg_names   : [ value ]
+    arg_add     : { 'channel': 'VSRC2'}
    
   - name        : AUX_ADC
     type        : FunctionalRegister
