Reorganizing the device (firmware) project

--- a/.gitignore
+++ b/.gitignore
@@ -3,39 +3,10 @@
 pcb/History
 pcb/XTB01*
 pcb/bitmap.png
-device/work*
+device/work/*
+!device/work/README.md
 MIO_firmware*
 device/ise/xlnx_auto_0_xdb/cst.xbcd
-device/ise/xst/work/hdllib.ref
-device/ise/xst/work/vlg01/pulse__gen__rising.bin
-device/ise/xst/work/vlg02/sram__fifo.bin
-device/ise/xst/work/vlg06/cdc__pulse__sync.bin
-device/ise/xst/work/vlg0C/cdc__fifomem.bin
-device/ise/xst/work/vlg0E/_c_g___m_o_d__pos.bin
-device/ise/xst/work/vlg0F/gpac__adc__rx__core.bin
-device/ise/xst/work/vlg14/bus__to__ip.bin
-device/ise/xst/work/vlg18/cdc__reset__sync.bin
-device/ise/xst/work/vlg18/seq__gen__blk__mem.bin
-device/ise/xst/work/vlg1F/gpio__core.bin
-device/ise/xst/work/vlg20/spi__core.bin
-device/ise/xst/work/vlg26/sram__fifo__core.bin
-device/ise/xst/work/vlg27/wptr__full.bin
-device/ise/xst/work/vlg28/_l_f___s_f_f___m_i_o.bin
-device/ise/xst/work/vlg28/cdc__sync__w2r.bin
-device/ise/xst/work/vlg2E/gpac__adc__iobuf.bin
-device/ise/xst/work/vlg2E/seq__gen.bin
-device/ise/xst/work/vlg30/cdc__sync__r2w.bin
-device/ise/xst/work/vlg36/cdc__syncfifo.bin
-device/ise/xst/work/vlg37/gpio.bin
-device/ise/xst/work/vlg42/seq__gen__core.bin
-device/ise/xst/work/vlg48/rrp__arbiter.bin
-device/ise/xst/work/vlg54/spi.bin
-device/ise/xst/work/vlg5D/blk__mem__gen__8__to__1__2k.bin
-device/ise/xst/work/vlg67/gpac__adc__rx.bin
-device/ise/xst/work/vlg6B/clk__gen.bin
-device/ise/xst/work/vlg74/reset__gen.bin
-device/ise/xst/work/vlg76/rptr__empty.bin
-device/ise/xst/work/vlg7A/gerneric__fifo.bin
 device/ise/LF_SFF_MIO_summary.xml
 device/ise/LF_SFF_MIO_usage.xml
 device/ise/LF_SFF_MIO_xst.xrpt
