Updated ADC readout by implementing a SEQ

--- a/host/lab_devices/LF_SFF_MIO.yaml
+++ b/host/lab_devices/LF_SFF_MIO.yaml
@@ -156,5 +156,5 @@ registers:
         position : 0
       - name     : Trigger
         position : 1  
-      - name     : SEQ3
+      - name     : ADC_Trigger
         position : 2
